demos/resource-quotas/good/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resource-quotas
  labels:
    app: resource-quotas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resource-quotas
  template:
    metadata:
      labels:
        app: resource-quotas
    spec:
      volumes:
        - name: web
          emptyDir: {}
      containers:
        - name: web
          image: nginx:1.25-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: web
              mountPath: /usr/share/nginx/html
