demos/resource-quotas/good/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: resource-quotas
spec:
  selector:
    app: resource-quotas
  ports:
    - port: 80
      targetPort: 80
